--- a/Lesson 1 caret_basics/lesson.yaml
+++ b/Lesson 1 caret_basics/lesson.yaml
@@ -1,4 +1,4 @@
-- Class: meta
+﻿- Class: meta
   Course: Machine Learning
   Lesson: caret Basics
   Author: Konrad Wölms
@@ -8,17 +8,17 @@
 
 - Class: text
   Output: This is the first lesson in this machine learning course. So before
-    we begin begin a few general remarks are in order. The goal of this course
+    we begin a few general remarks are in order. The goal of this course
     is training machine learning models and selecting the ones that perform best
     in a systematic way. These are high level skills that should be transferable
     across implementations and programming languages. That being said, we'll be
-    using the R specific caret package to ilustrate the content. Other languages
-    will have similar packages that can be usded for machine learning. Like
+    using the R specific caret package to illustrate the content. Other languages
+    will have similar packages that can be used for machine learning. Like
     python's prominent sklearn for instance.
     
 - Class: text
   Output: A quick note on what this course does not try to do. It does not teach
-    how the algorithms of specific models work, but mearly employs the models.
+    how the algorithms of specific models work, but merely employs the models.
     It also doesn't address data wrangling, data cleaning and exploratory data
     analysis. As a consequence we'll often use base R for functionality that is
     not directly related to the course's content, while a real life application
@@ -32,7 +32,7 @@
 
 - Class: text
   Output: caret also offers functionality to support preprocessing.
-    The goal of this leasson is the ability to quickly preprocess
+    The goal of this lesson is the ability to quickly preprocess
     data and train different simple models using caret. This forms
     the basis for model evaluation and model selection in the
     following lessons.
@@ -58,7 +58,7 @@
 - Class: text
   Output: The target variable is also numeric so we have a regression problem.
     The target corresponds to the median value of owner-occupied homes in
-    thousands of USD. So the purpouse of this regression problem is to predict
+    thousands of USD. So the purpose of this regression problem is to predict
     housing prices. More information on the dataset can be found in the help
     by typing '?BonstonHousing'.
     
@@ -82,8 +82,8 @@
   
 - Class: figure
   Output: We have made a plot comparing the predictions to the actual target
-    values on the test set. We also insertet a line with slope one into the plot.
-    For perfect predicitons we would expect that all points fall on that line.
+    values on the test set. We also inserted a line with slope one into the plot.
+    For perfect predictions we would expect that all points fall on that line.
     In reality, like in our example this will never be the case and in later
     lessons we'll explore how to measure our models performance.
   Figure: linearModelPrediction.R
@@ -91,14 +91,15 @@
 
 - Class: cmd_question
   Output: caret's train function actually does a little more than just fitting
-    a single model. In fact it performs some model slection/model performance
+    a single model. In fact it performs some model selection/model-performance
     measuring in the background. Future lessons will explain how to take advantage
     of this, but for now we'll supply additional arguments to the train function
-    in order to suppress this behavious for now.
-    To try this out train a regression tree on the same data. Use the method rpart
+    in order to suppress this behavior for now.
+    To try this out train a regression tree on the same data. Use the method 'rpart'
     and additionally set the variables trControl = cntrl and tuneGrid = tree_grid,
     where we defined the configuration variabels cntrl and tree_grid for you.
-    In order to save some typing rember that you can use tab completion.
+    In order to save some typing remember that you can use tab completion. Store
+    the final result in the variable mdl_tree.
   
   CorrectAnswer: mdl_tree <- train(X_train,y_train,method='rpart',trControl=cntrl,tuneGrid=tree_grid)
   AnswerTests: omnitest(correctExpr="mdl_tree <- train(X_train,y_train,method='rpart',trControl=cntrl,tuneGrid=tree_grid)")
@@ -109,7 +110,7 @@
     illustrates how easily we can switch between different kinds of
     models in caret. Prediction is just as easy with the new model as with the old.
     Make new predictions using predict and the arguments mdl_tree and 
-    newdata=X_test. Store the results in a new variable y_pred_rf.
+    newdata=X_test. Store the results in a new variable y_pred_tree.
   CorrectAnswer: y_pred_tree<- predict(mdl_tree,newdata=X_test)
   AnswerTests: omnitest(correctExpr="y_pred_tree<- predict(mdl_tree,newdata=X_test)")
   Hint: Type "y_pred_tree<- predict(mdl_tree,newdata=X_test)"
@@ -139,7 +140,7 @@
   
 - Class: Text
   Output: As a final note, we mentioned that caret is a frontend package, so it
-    actually relies on other packages to do the heavy liftng. In case the
+    actually relies on other packages to do the heavy lifting. In case the
     required packages for a particular model are not installed on your machine
     caret will nicely ask you whether you want to install them. To get an
     overview off the available models in caret (possible arguments of train's
@@ -148,6 +149,6 @@
   
 - Class: Text
   Output: This concludes our lesson, where your got a first impression of why
-    caret is a great tool to work with several machine learnin models in a unified
+    caret is a great tool to work with several machine learning models in a unified
     framework.
     
