--- a/Lesson 2 Metrics_for_model_performance/lesson.yaml
+++ b/Lesson 2 Metrics_for_model_performance/lesson.yaml
@@ -1,4 +1,4 @@
-- Class: meta
+﻿- Class: meta
   Course: Machine_Learning
   Lesson: Metrics for Model Performance
   Author: Konrad Wölms
@@ -16,7 +16,7 @@
   Output: Before we start with this topic let's quickly recap the command's from
     of the last lesson. We again supplied you with a training set X_train,y_train
     from the Boston housing data. Train a tree model on this data using the
-    rpart method and set trControl to cntrl and tuneGrid to tree_grid as is the
+    'rpart' method and set trControl to cntrl and tuneGrid to tree_grid as is the
     previous lesson. The last two settings will keep train's functionality simple
     for now. Assign the final result to a variable mdl_tree.
   
@@ -33,13 +33,13 @@
 
 - Class: text
   Output: Now that we've recalled how to train and predict we'll look at predictions
-    of tow different models in comparison. One is the one you've just trained and
+    of two different models in comparison. One is the one you've just trained and
     the other is a second tree model that we trained for you. We've stored
     the predictions for the testset in the variables y_pred_tree1 and y_pred_tree2
     respectively. y_test contains the ground truth values.
 
 - Class: figure
-  Output: As a first step let's look at the plot of predictions agains ground truth
+  Output: As a first step let's look at the plot of predictions against ground truth
     values. We see that both models are quite simple tree models that can actually
     only predict a finite set of different values, but besides that we would like
     to know which model does the better job. You'll probably agree that it is hard
@@ -75,7 +75,7 @@
   Output: Unfortunately these absolute metrics don't tell us very much. Also
     comparing two different metrics for the same model is not particularly
     meaningful. On the other hand we can now use these metrics to compare
-    our two different predictions. We already perfored the calculations for
+    our two different predictions. We already performed the calculations for
     you and stored the results in the variable model_comp. Type this variable
     into the prompt in order to see the content.
   CorrectAnswer: model_comp
@@ -96,7 +96,7 @@
     pmse for a concrete example. Under mse a prediction of $400K while the ground
     truth is $200K is just as bad as a prediction of $1,200K while the ground
     truth is $1,000K. Under pmse the former would be 5 times as bad as the latter.
-    Which metric is preferred will depend on the particular but it will be a crutial
+    Which metric is preferred will depend on the particular but it will be a crucial
     decision.
     
 
@@ -105,8 +105,8 @@
     well they perform on unseen data, where we use the test set as our proxy
     for unseen data (which by definition we don't have yet). We therefore
     measured the metrics on the test set. The problem is that if we now use this
-    information to select a model or change it's paramters we essentially used
-    information obtained from the test set, through the lense of our metric. We 
+    information to select a model or change its parameters we essentially used
+    information obtained from the test set, through the lens of our metric. We 
     could therefore not use the testset as proxy for unseen data after using its
     metric information. In order to avoid this problem the goal is to get an
     as good as possible understanding of how well the model will do on the
@@ -126,12 +126,12 @@
   Output: This is clearly a lot lower than our test metric earlier. So it is does
     not help us much in predicting how well our model will do on unseen data. More
     advanced techniques are needed to estimate this. It is the subject of model
-    validation and will be adressed in the next lesseon.
+    validation and will be addressed in the next lesson.
 
 - Class: text
   Output: The gap that we saw between the metric on the train set (seen data) and
     the test (unseen data) is also often subject of analysis in the context of
-    what is called overfitting and unterfitting. This is another subject for a future
+    what is called overfitting and underfitting. This is another subject for a future
     lesson.
     
 - Class: mult_question
@@ -165,7 +165,7 @@
     can be used to measure model performance. We've seen an example of how this
     is used to compare performance of different models and pointed out how it
     will be important for other topics such as prediction model performance
-    on unseen data (model validation) and analysing the performance differences
+    on unseen data (model validation) and analyzing the performance differences
     between seen and unseen data (underfitting/overfitting analysis). We also
     discussed how the choice of metric is very important and should align with
     project/business goals.
